--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@
 
 /* Components */
 //import "components/form_field";
-@import "components/_navbar";
+@import "components/navigation";
 
 /* Sections */
 //import "section/registration_form";
