--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -3,7 +3,7 @@
   display: flex;
   top: 0;
   left: 0;
-  width: 240px;
+  width: 210px;
   height: 100vh;
   color: $light-color;
   background-color: $dark-color;
@@ -16,7 +16,7 @@
     height: 75px;
 
     .logo {
-      font-size: 100px;
+      font-size: 86px;
       color: $light-color;
       position: absolute;
       left: 20px;
@@ -25,7 +25,7 @@
 
     .hamburger {
       display: inline-block;
-      line-height: 20px;
+      line-height: 16px;
       padding: 3px;
       font-size: 22px;
       position: absolute;
@@ -39,14 +39,16 @@
 
     ul {
       list-style: none;
-      padding: 0;
-      margin: 0 0 20px 0;
-      border-bottom: solid 2px $main-color-active;
+      padding: 0 0 20px 0;
+      margin: 0 0 10px 0;
+      border-bottom: solid 1px $secondary-color;
     }
 
     li {
       padding-left: 5px;
       background-color: $dark-color;
+      overflow: hidden;
+
 
       &:hover {
         background-color: $main-color;
@@ -55,8 +57,9 @@
 
     a {
       display: inline-block;
-      font-size: 16px;
-      padding: 16px 20px;
+      font-size: 15px;
+      font-family: $brand-font;
+      padding: 12px;
       height: 100%;
       width: 100%;
       color: $secondary-color;
@@ -70,8 +73,16 @@
     }
 
     i {
-      margin-right: 20px;
+      margin-right: 35px;
     }
+
+    span {
+      display: inline-block;
+    }
+  }
+
+  .nav_wrapper ul li {
+    justify-content: space-between;
   }
 
   .nav_manager {
@@ -85,19 +96,25 @@
     h4 {
       text-transform: uppercase;
       justify-self: stretch;
-      margin: 20px 0;
+      margin: 10px 0;
+      color: $secondary-color;
+      font-family: $brand-font;
+      font-size: 15px;
     }
 
     a {
       display: flex;
       justify-content: center;
       align-items: center;
+      color: $tertiary-color;
+      font-family: $brand-font;
+      font-size: 14px;
 
       .manager_img {
         margin-right: 10px;
         border-radius: 50%;
         max-width: 100%;
-        width: 60px;
+        width: 45px;
       }
     }
   }
