--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,10 +5,13 @@
 
 /* Components */
 //import "components/form_field";
-@import "components/navigation";
+//@import "components/navigation";
+@import "components/buttons";
 
 /* Sections */
 //import "section/registration_form";
+@import "sections/navigation";
+@import "sections/profilebar";
 
 /* Pages / Views */
 //import "pages/registration";
