--- a/sass/sections/_navigation.scss
+++ b/sass/sections/_navigation.scss
@@ -5,7 +5,7 @@
   left: 0;
   width: 210px;
   height: 100vh;
-  color: $light-color;
+  color: #ffffff;
   background-color: $dark-color;
   padding: 10px 0;
   z-index: 10;
