add _mainpage.scss and _item.scss and add few new styles

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,11 +7,13 @@
 //import "components/form_field";
 //@import "components/navigation";
 @import "components/buttons";
+@import "components/items";
 
 /* Sections */
 //import "section/registration_form";
 @import "sections/navigation";
 @import "sections/profilebar";
+@import "sections/mainpage";
 
 /* Pages / Views */
 //import "pages/registration";
