--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 /*** Fonts ***/
 *, *::before, *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -361,7 +363,7 @@ a.btn {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 10px 20px;
   text-decoration: none;
 }
@@ -389,6 +391,18 @@ a.btn {
 
 .btn-warning:hover {
   background-color: #ffa200;
+}
+
+.btn-square {
+  display: inline-block;
+  padding: 14px;
+}
+
+.input-date {
+  padding: 15px;
+  border: solid 2px #e3e3e3;
+  border-radius: 5px;
+  margin: 0;
 }
 
 /* Sections */
@@ -522,20 +536,27 @@ a.btn {
   background-color: #ffffff;
   margin-left: 240px;
   width: calc(100% - 240px);
-  min-height: 50px;
   font-size: 1,3em;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: end;
+      justify-content: flex-end;
+}
+
+.prof_bar i {
+  font-size: 0.9em;
 }
 
 .prof_bar ul {
   list-style: none;
-  float: right;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .prof_bar ul li {
-  float: left;
-  border-style: solid;
-  border-width: 0 0 0 2px;
-  border-color: #e3e3e3;
+  border-left: solid 1px #e3e3e3;
 }
 
 .prof_bar .wallet span {
@@ -552,14 +573,48 @@ a.btn {
 }
 
 .prof_bar a {
-  display: inline-block;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
   color: #a6a6a6;
-  padding: 10px;
-  line-height: 30px;
+  padding: 18px;
 }
 
 .prof_bar a span {
-  margin: 0 10px;
+  margin: 0 20px;
+}
+
+.gen_stat {
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #ffffff;
+  margin: 20px;
+  margin-left: calc 240px + 20px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.gen_stat h3 {
+  text-transform: uppercase;
+}
+
+.gen_stat .header {
+  justify-self: stretch;
+}
+
+.gen_stat .date_section {
+  padding: 20px;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  border-bottom: solid 1px #e3e3e3;
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+
+.gen_stat img {
+  max-width: 100%;
 }
 
 /* Pages / Views */
