--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,7 +6,7 @@ a.btn {
   display: inline-block;
   text-transform: capitalize;
   user-select: none;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 10px 20px;
   text-decoration: none;
 
@@ -34,6 +34,14 @@ a.btn {
   &:hover {
     background-color: $main-color-active;
   }
+}
+
+.btn-square {
+  display: inline-block;
+  // width: 30px;
+  // line-height: 30px;
+  // height: 30px;
+  padding: 14px;
 }
 
 
