--- a/sass/sections/_profilebar.scss
+++ b/sass/sections/_profilebar.scss
@@ -2,18 +2,27 @@
   background-color: $light-color;
   margin-left: 240px;
   width: calc(100% - #{240px});
-  min-height: 50px;
   font-size: 1,3em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  // padding-top: 0;
+  // margin-top: 0;
+
+  i {
+    font-size: 0.9em;
+  }
 
   ul {
     list-style: none;
-    float: right;
+    display: flex;
 
     li {
-      float: left;
-      border-style: solid;
-      border-width: 0 0 0 2px;
-      border-color: $disabled-color;
+      //float: left;
+      // border-style: solid;
+      // border-width: 0 0 0 2px;
+      // border-color: $disabled-color;
+      border-left: solid 1px $disabled-color;
     }
   }
 
@@ -35,13 +44,13 @@
   }
 
   a {
-    display: inline-block;
+    display: flex;
+    align-self: stretch;
     color: $header-color;
-    padding: 10px;
-    line-height: 30px;
+    padding: 18px;
 
     span {
-      margin: 0 10px;
+      margin: 0 20px;
     }
   }
 
