--- a/css/style.css
+++ b/css/style.css
@@ -416,8 +416,8 @@ a.btn {
   height: 100vh;
   color: #ffffff;
   background-color: #191919;
-  padding: 10px 0;
-  z-index: 10;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
 
 .navigation_menu .nav_logo {
@@ -448,7 +448,6 @@ a.btn {
 .navigation_menu .nav_wrapper ul {
   list-style: none;
   padding: 0 0 20px 0;
-  margin: 0 0 10px 0;
   border-bottom: solid 1px #979797;
 }
 
@@ -466,11 +465,13 @@ a.btn {
   display: inline-block;
   font-size: 15px;
   font-family: "Open Sans", Helvetica, Arial;
-  padding: 12px;
+  padding: 16px 20px;
   height: 100%;
   width: 100%;
   color: #979797;
   background-color: #191919;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .navigation_menu .nav_wrapper a:hover {
@@ -479,7 +480,7 @@ a.btn {
 }
 
 .navigation_menu .nav_wrapper i {
-  margin-right: 35px;
+  margin-right: 25px;
 }
 
 .navigation_menu .nav_wrapper span {
