--- a/sass/sections/_mainpage.scss
+++ b/sass/sections/_mainpage.scss
@@ -1,35 +1,114 @@
 .gen_stat {
+  box-shadow: 0 0 15px 1px $disabled-color;
+  margin-left: 240px;
+  //width: calc(100% - #{240px});
+  max-width: 86%;
+  margin-top: 30px;
+
+
+}
+
+.header {
+  width: 100%;
+  justify-self: stretch;
+  padding: 20px;
+  border-bottom: solid 1px $disabled-color;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-family: $brand-font;
+  color: $header-color;
+}
+
+.input_section {
   display: flex;
-  background-color: $light-color;
-  margin: 20px;
-  margin-left: calc (#{240px} + #{20px});
+  justify-content: center;
+  align-items: center;
+  // background-color: $light-color;
+  // margin: 20px;
+  // margin-left: calc (#{240px} + #{20px});
+  // margin-left: 500px;
+  // padding-left: 500px;
+  // margin-right: 100px;
   flex-wrap: wrap;
+  margin: 50px 0 50px 0;
 
-  h3 {
-    text-transform: uppercase;
-  }
-
-  .header {
-    justify-self: stretch;
-  }
-
-  .date_section {
-    padding: 20px;
+  .input_date_section {
     display: flex;
-    width: 100%;
-    border-bottom: solid 1px $disabled-color;
-    justify-content: center;
+    align-items: stretch;
+    justify-content: stretch;
+    flex-wrap: nowrap;
+    flex-basis: 22%;
+    border-radius: 5px;
+    border: solid 1px $disabled-color;
+
+    .input-date {
+      display: flex;
+      flex: 5 0 0%;
+      line-height: 30px;
+      padding: 5px;
+      margin: 5px;
+      font-family: $brand-font;
+      color: $header-color;
+      border-style: none;
+
+      &:first-of-type {
+        border-right: solid 1px $disabled-color;
+        margin-right: -2px;
+      }
+
+      i {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        flex: 1 0 10%;
+        margin-right: 10px;
+      }
+    }
   }
 
-  img {
-    max-width: 100%;
+  .input_date_btn {
+    margin: 10px;
+    flex-basis: 5px;
   }
+
+  // h3 {
+  //   text-transform: uppercase;
+  // }
+
+  // .header {
+  //   justify-self: stretch;
+  // }
+
+  // .date_section {
+  //   padding: 20px;
+  //   display: flex;
+  //   width: 100%;
+  //   border-bottom: solid 1px $disabled-color;
+  //   justify-content: center;
+  // }
+
+  // img {
+  //   max-width: 100%;
+  // }
+}
+
+.gen-stat-img {
+  margin-top: 50px;
+  margin-left: 450px;
+  padding-bottom: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .date_numbers {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  border-bottom: unset;
 
   .date-number {
     flex-basis: 20%;
@@ -38,20 +117,38 @@
     display: flex;
     justify-content: space-between;
 
-    span:first-of-type {
-      font-weight: bold;
+
+    span {
+      display: flex;
+      padding: 5px;
+      white-space: nowrap;
+      font-family: $brand-font;
+      color: $header-color;
+
+      span:first-of-type {
+        font-weight: bold;
+        justify-content: flex-start;
+        flex:  0 0 30%;
+      }
+
+      span:last-of-type {
+        color: $text-color;
+        justify-content: flex-end;
+        flex: 0 0 20%;
+      }
+
     }
 
-    span:last-of-type {
-      color: $text-color;
+    .date-number-span {
+      color: black;
     }
+
   }
+
+
+
 }
 
-// .gen-stat-img {
-//   max-width: 100%;
-//   width: 50%;
-// }
 
 
 .links {
