--- a/sass/sections/_profilebar.scss
+++ b/sass/sections/_profilebar.scss
@@ -1,11 +1,12 @@
 .prof_bar {
   background-color: $light-color;
-  margin-left: 240px;
-  width: calc(100% - #{240px});
+  //margin-left: 240px;
+  //width: calc(100% - #{240px});
   font-size: 1,3em;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
+  box-shadow: 0 0 15px 1px $disabled-color;
   // padding-top: 0;
   // margin-top: 0;
 
