--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,10 +1,10 @@
 a.btn {
   color: white;
+  font-family: $brand-font;
 }
 
 .btn {
   display: inline-block;
-  text-transform: capitalize;
   user-select: none;
   border-radius: 5px;
   padding: 10px 20px;
@@ -38,9 +38,6 @@ a.btn {
 
 .btn-square {
   display: inline-block;
-  // width: 30px;
-  // line-height: 30px;
-  // height: 30px;
   padding: 14px;
 }
 
