--- a/sass/sections/_mainpage.scss
+++ b/sass/sections/_mainpage.scss
@@ -2,7 +2,8 @@
   box-shadow: 0 0 5px 1px $disabled-color;
   margin-left: 240px;
   max-width: 86%;
-  margin-top: 30px;
+  margin-top: 100px;
+  background-color: white;
 }
 
 .header_gen_stat {
@@ -117,15 +118,15 @@ h3 {
 }
 
 .links {
-  //padding: 30px;
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   box-shadow: 0 0 5px 1px $disabled-color;
   margin-left: 240px;
   max-width: 86%;
   margin-top: 30px;
+  margin-bottom: 30px;
+  background-color: white;
 
   .links_section {
     width: 100%;
@@ -133,19 +134,83 @@ h3 {
     flex-direction: column;
     align-items: center;
 
-    span {
-      padding: 5px;
-      font-family: $brand-font;
-      color: $header-color;
-    }
-  }
+    .link {
+      display: flex;
+      width: 75%;
+      justify-content: space-between;
+      padding: 20px;
+      border-bottom: solid 1px $disabled-color;
+      flex-wrap: wrap;
+      overflow: auto;
 
-  .link {
-    display: flex;
-    width: 75%;
-    justify-content: flex-start;
-    padding: 20px;
-    border-bottom: solid 1px $disabled-color;
+      &:hover {
+        background-color: $hoover-color-default;
+
+        span:nth-child(3) a {
+          opacity: 1;
+
+          i {
+            font-weight: bold;
+          }
+
+          .link-icons-links {
+            color: #ffb638;
+          }
+        }
+      }
+
+      span {
+        padding: 5px;
+        font-family: $brand-font;
+        color: $header-color;
+      }
+
+      span:first-child {
+        display: flex;
+        flex: 0 0 0 40%;
+        justify-content: flex-start;
+        white-space: nowrap;
+        font-weight: bold;
+        max-width: 0px;
+      }
+
+      span:nth-child(2) {
+        display: flex;
+        //position: relative;
+        //flex: 0 0 0 40%;
+        //text-overflow: ellipsis;
+        //justify-content: flex-start;
+        //margin: 0 auto;
+
+        a {
+          text-decoration: none;
+          color: $link-color;
+        }
+
+        a:hover {
+          color: $main-color-active;
+        }
+      }
+
+      span:nth-child(3) {
+        display: flex;
+        flex: 0 0 4%;
+        //justify-content: flex-start;
+
+        a {
+          opacity: 0;
+        }
+
+        .link-icon-links {
+          color: $link-color-active;
+          margin-right: 20px;
+        }
+
+        .link-icon-trash {
+          color: $dark-color;
+        }
+      }
+    }
   }
 
   .links_buttom {
