--- a/sass/sections/_profilebar.scss
+++ b/sass/sections/_profilebar.scss
@@ -9,6 +9,10 @@
   box-shadow: 0 0 5px 1px $disabled-color;
   // padding-top: 0;
   // margin-top: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 
   i {
     font-size: 0.9em;
@@ -24,6 +28,10 @@
       // border-width: 0 0 0 2px;
       // border-color: $disabled-color;
       border-left: solid 1px $disabled-color;
+
+      a {
+        text-decoration: none;
+      }
     }
   }
 
