--- a/sass/sections/_navigation.scss
+++ b/sass/sections/_navigation.scss
@@ -110,7 +110,7 @@
 
       .manager_img {
         margin-right: 10px;
-        border-radius: 50%;
+        //border-radius: 50%;
         max-width: 100%;
         width: 45px;
       }
