--- a/sass/sections/_profilebar.scss
+++ b/sass/sections/_profilebar.scss
@@ -1,14 +1,10 @@
 .prof_bar {
   background-color: $light-color;
-  //margin-left: 240px;
-  //width: calc(100% - #{240px});
   font-size: 1,3em;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
   box-shadow: 0 0 5px 1px $disabled-color;
-  // padding-top: 0;
-  // margin-top: 0;
   position: fixed;
   top: 0;
   right: 0;
@@ -23,11 +19,11 @@
     display: flex;
 
     li {
-      //float: left;
-      // border-style: solid;
-      // border-width: 0 0 0 2px;
-      // border-color: $disabled-color;
       border-left: solid 1px $disabled-color;
+
+      &:hover {
+        background-color: $hoover-color-default;
+      }
 
       a {
         text-decoration: none;
