--- a/sass/sections/_mainpage.scss
+++ b/sass/sections/_mainpage.scss
@@ -163,6 +163,7 @@ h3 {
         padding: 5px;
         font-family: $brand-font;
         color: $header-color;
+        flex: 1;
       }
 
       span:first-child {
@@ -171,7 +172,7 @@ h3 {
         justify-content: flex-start;
         white-space: nowrap;
         font-weight: bold;
-        max-width: 0px;
+        //max-width: 0px;
       }
 
       span:nth-child(2) {
